# libcfile

./: .gitignore  Makefile.am  README.md  configure.ac  lib.pc.in  libcfile.spec
CB_libcfile/: .gitignore  CB_libcfile.cbp  shared_file_test.cbp
CodeBlocks/: .gitignore  libcfile.cbp  libcfile.workspace  shared_file_test.cbp
Visual_Studio/: .gitignore
Visual_Studio/VS17/: libcfile.sln  libcfile.vcxproj  libcfile.vcxproj.filters
Visual_Studio/VS17/shared_file_test/: shared_file_test.vcxproj  shared_file_test.vcxproj.filters
include/: cfile.hpp  cfile_inst.hpp
src/: cfile_base.cpp  shared_file.cpp  string_management.cpp  unique_file.cpp
test/: .gitignore  linux_test.bash  makefile  win_test.bat
test/src/: shared_file_test.cpp
